WebKit Bugzilla
New
Browse
Search+
Log In
×
Sign in with GitHub
or
Remember my login
Create Account
·
Forgot Password
Forgotten password account recovery
RESOLVED FIXED
163399
[Clean RenderTree] LayoutTests/imported/blink/fast/table/crash-bad-child-table-continuation.html fails.
https://bugs.webkit.org/show_bug.cgi?id=163399
Summary
[Clean RenderTree] LayoutTests/imported/blink/fast/table/crash-bad-child-tabl...
alan
Reported
2016-10-13 12:43:01 PDT
LayoutTests/imported/blink/fast/table/crash-bad-child-table-continuation.html -> <pre> renderer stays dirty after FrameView::layout().
Attachments
Patch
(4.44 KB, patch)
2016-10-13 13:08 PDT
,
alan
no flags
Details
Formatted Diff
Diff
View All
Add attachment
proposed patch, testcase, etc.
alan
Comment 1
2016-10-13 13:08:34 PDT
Created
attachment 291508
[details]
Patch
Dave Hyatt
Comment 2
2016-10-13 13:11:57 PDT
Comment on
attachment 291508
[details]
Patch r=me
WebKit Commit Bot
Comment 3
2016-10-13 14:43:39 PDT
Comment on
attachment 291508
[details]
Patch Clearing flags on attachment: 291508 Committed
r207310
: <
http://trac.webkit.org/changeset/207310
>
WebKit Commit Bot
Comment 4
2016-10-13 14:43:43 PDT
All reviewed patches have been landed. Closing bug.
David Kilzer (:ddkilzer)
Comment 5
2017-01-20 20:11:08 PST
<
rdar://problem/29393654
>
Note
You need to
log in
before you can comment on or make changes to this bug.
Top of Page
Format For Printing
XML
Clone This Bug